src/test/ui/stability-attribute/stability-attribute-sanity-3.stderr
error: macro has missing stability attribute
  --> $DIR/stability-attribute-sanity-3.rs:8:1
   |
LL | / macro_rules! mac {
LL | |     () => ()
LL | | }
   | |_^

error: aborting due to previous error

